--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python3.6-node-browsers
+      - image: circleci/python3.6.5-browsers
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
